--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
         }
     ],
     "require": {
-        "omnifraud/common": "~0.1",
+        "omnifraud/common": "dev-master",
         "kount/kount-ris-php-sdk": "^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "mockery/mockery": "^1.0",
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
         "psr-4": {
@@ -29,6 +31,9 @@
     "scripts": {
         "test": [
             "phpunit"
+        ],
+        "lint": [
+            "phpcs --standard=PSR2 src"
         ]
     },
     "minimum-stability": "dev",
